--- a/code/dida-rust/Cargo.toml
+++ b/code/dida-rust/Cargo.toml
@@ -10,3 +10,4 @@ timely = "0.12.0"
 differential-dataflow = "0.12.0"
 serde = { version="1.0.126", features=["derive"] }
 clap = "3.0.0-beta.2"
+crossbeam = "0.8.1"
