--- a/code/dida-rust/Cargo.toml
+++ b/code/dida-rust/Cargo.toml
@@ -11,4 +11,4 @@ differential-dataflow = "0.12.0"
 serde = { version="1.0.126", features=["derive"] }
 clap = "3.0.0-beta.2"
 crossbeam = "0.8.1"
-nom = "6.2.1"
+ron = "0.6.4"
