--- a/code/dida-rust/Cargo.toml
+++ b/code/dida-rust/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version="1.0.126", features=["derive"] }
 clap = "3.0.0-beta.2"
 crossbeam = "0.8.1"
 ron = "0.6.4"
+abomonation = "0.7.3"
+abomonation_derive = "0.5.0"
