--- a/code/dida-rust/Cargo.toml
+++ b/code/dida-rust/Cargo.toml
@@ -14,3 +14,14 @@ crossbeam = "0.8.1"
 ron = "0.6.4"
 abomonation = "0.7.3"
 abomonation_derive = "0.5.0"
+rdkafka = { version = "0.25", features=["cmake-build"] }
+tokio = { version ="1.11.0", features=["full"] }
+futures = "0.3.17"
+
+[lib]
+name="difflouvain_utils"
+path="src/lib.rs"
+test=true
+doctest=true
+bench=true
+
