--- a/code/infra/kafka.deployment.yaml
+++ b/code/infra/kafka.deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: '192.168.1.240'
             - name: KAFKA_ZOOKEEPER_CONNECT
-              value: "zookeeperkafka1:+2081"
+              value: zookeeperkafka1:2181
             - name: KAFKA_BROKER_ID
               value: o
             - name: KAFKA_CREATE_TOPICS
