--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "extra-docs/propsal"]
 	path = extra-docs/propsal
 	url = https://git.overleaf.com/6110cb072c7d0e7436a7a50f
+[submodule "thesis"]
+	path = thesis
+	url = https://git.overleaf.com/60f198da5edde66a831bfa7f
