--- a/code/dida-rust/Cargo.toml
+++ b/code/dida-rust/Cargo.toml
@@ -21,7 +21,8 @@ num-traits="0.2.14"
 petgraph = "0.6.0"
 petgraph-graphml = "3.0.0"
 pprof = {version="0.6.0", features=["flamegraph"]}
-
+lazy_static = "1.4.0"
+rand ="0.8.4"
 [lib]
 name="difflouvain_utils"
 path="src/lib.rs"
